@@ -1,3 +1,12 @@
+2022-02-15  Jon Davis  <jond@apple.com>
+
+        Fix WordPress wpautop to account for the Dialog element.
+        https://bugs.webkit.org/show_bug.cgi?id=236320
+
+        Reviewed by Darin Adler.
+
+        * wp-content/themes/webkit/functions.php:
+
 2022-02-07  Tim Nguyen  <ntim@apple.com>
 
         Unreviewed, make <dialog> demos dark theme work in iframes
